src/snapshots/prql__compiler__test__compile-2.snap
---
source: src/compiler.rs
assertion_line: 639
expression: compile(ast)?
---
Query:
  - Pipeline:
      - From: employees
      - Filter:
          - Ident: country
          - Raw: "="
          - String: USA
      - Derive:
          - lvalue: gross_salary
            rvalue:
              Terms:
                - Ident: salary
                - Raw: +
                - Ident: payroll_tax
          - lvalue: gross_cost
            rvalue:
              Terms:
                - Terms:
                    - Ident: salary
                    - Raw: +
                    - Ident: payroll_tax
                - Raw: +
                - Ident: benefits_cost
      - Filter:
          - Terms:
              - Terms:
                  - Ident: salary
                  - Raw: +
                  - Ident: payroll_tax
              - Raw: +
              - Ident: benefits_cost
          - Raw: ">"
          - Raw: "0"
      - Aggregate:
          by:
            - Ident: title
            - Ident: country
          calcs:
            - SString:
                - String: AVG(
                - Expr:
                    Terms:
                      - Ident: salary
                - String: )
            - SString:
                - String: SUM(
                - Expr:
                    Terms:
                      - Ident: salary
                - String: )
            - SString:
                - String: AVG(
                - Expr:
                    Terms:
                      - Terms:
                          - Ident: salary
                          - Raw: +
                          - Ident: payroll_tax
                - String: )
            - SString:
                - String: SUM(
                - Expr:
                    Terms:
                      - Terms:
                          - Ident: salary
                          - Raw: +
                          - Ident: payroll_tax
                - String: )
            - SString:
                - String: AVG(
                - Expr:
                    Terms:
                      - Terms:
                          - Terms:
                              - Ident: salary
                              - Raw: +
                              - Ident: payroll_tax
                          - Raw: +
                          - Ident: benefits_cost
                - String: )
          assigns:
            - lvalue: sum_gross_cost
              rvalue:
                SString:
                  - String: SUM(
                  - Expr:
                      Terms:
                        - Terms:
                            - Terms:
                                - Ident: salary
                                - Raw: +
                                - Ident: payroll_tax
                            - Raw: +
                            - Ident: benefits_cost
                  - String: )
            - lvalue: count
              rvalue:
                SString:
                  - String: COUNT(*)
      - Sort:
          - SString:
              - String: SUM(
              - Expr:
                  Terms:
                    - Terms:
                        - Terms:
                            - Ident: salary
                            - Raw: +
                            - Ident: payroll_tax
                        - Raw: +
                        - Ident: benefits_cost
              - String: )
      - Filter:
          - SString:
              - String: SUM(
              - Expr:
                  Terms:
                    - Terms:
                        - Terms:
                            - Ident: salary
                            - Raw: +
                            - Ident: payroll_tax
                        - Raw: +
                        - Ident: benefits_cost
              - String: )
          - Raw: ">"
          - Raw: "200"
      - Take: 20

