src/snapshots/prql__compiler__test__replace_variables-2.snap
---
source: src/compiler.rs
assertion_line: 362
expression: "&fold.fold_item(ast)?"

---
Query:
  - Pipeline:
      - From:
          - Ident: employees
      - Filter:
          - Expr:
              - Ident: country
              - Raw: "="
              - String: USA
      - Derive:
          - lvalue: gross_salary
            rvalue:
              Items:
                - Ident: salary
                - Raw: +
                - Ident: payroll_tax
          - lvalue: gross_cost
            rvalue:
              Items:
                - Items:
                    - Ident: salary
                    - Raw: +
                    - Ident: payroll_tax
                - Raw: +
                - Ident: benefits_cost
      - Filter:
          - Expr:
              - Items:
                  - Items:
                      - Ident: salary
                      - Raw: +
                      - Ident: payroll_tax
                  - Raw: +
                  - Ident: benefits_cost
              - Raw: ">"
              - Raw: "0"
      - Aggregate:
          by: []
          calcs:
            - NamedArg:
                name: by
                arg:
                  List:
                    - Expr:
                        - Ident: title
                    - Expr:
                        - Ident: country
            - List:
                - Expr:
                    - Items:
                        - Ident: average
                        - Ident: salary
                - Expr:
                    - Items:
                        - Ident: sum
                        - Ident: salary
                - Expr:
                    - Items:
                        - Ident: average
                        - Items:
                            - Ident: salary
                            - Raw: +
                            - Ident: payroll_tax
                - Expr:
                    - Items:
                        - Ident: sum
                        - Items:
                            - Ident: salary
                            - Raw: +
                            - Ident: payroll_tax
                - Expr:
                    - Items:
                        - Ident: average
                        - Items:
                            - Items:
                                - Ident: salary
                                - Raw: +
                                - Ident: payroll_tax
                            - Raw: +
                            - Ident: benefits_cost
                - Expr:
                    - Assign:
                        lvalue: sum_gross_cost
                        rvalue:
                          Items:
                            - Ident: sum
                            - Items:
                                - Items:
                                    - Ident: salary
                                    - Raw: +
                                    - Ident: payroll_tax
                                - Raw: +
                                - Ident: benefits_cost
                - Expr:
                    - Assign:
                        lvalue: count
                        rvalue:
                          Ident: count
          assigns: []
      - Sort:
          - Items:
              - Ident: sum
              - Items:
                  - Items:
                      - Ident: salary
                      - Raw: +
                      - Ident: payroll_tax
                  - Raw: +
                  - Ident: benefits_cost
      - Filter:
          - Expr:
              - Items:
                  - Ident: sum
                  - Items:
                      - Items:
                          - Ident: salary
                          - Raw: +
                          - Ident: payroll_tax
                      - Raw: +
                      - Ident: benefits_cost
              - Raw: ">"
              - Raw: "200"
      - Take: 20

